Change on .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
-*.swp
-tags
-/Debug
-/Release
+#Some of these are related to eclipse. So i keep them out of my repo
+.cproject
+.dep/
+.project
+.settings/
+
+
+#documentation
+doc/html
+
+#files being edited
+*~
+
+# make and build files
+*.lst
+*.o
+*.eep
+*.lss
+*.map
+*.sym
+
+# I keep these, since I prefer having the reference of the final build
+*.elf
+*.hex
+Debug/
+Release/
+debug/
+release/
+/Default/
